--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -34,7 +34,15 @@
     /* box-shadow: 0px 0px 2px 0.5px rgba(19, 19, 19, 0.178); */
     border: 1px solid rgb(236, 236, 236);
 }
-
+.crc {
+    display: inline-flex;
+    height: 1.4vh;
+    border-radius: 100px;
+    width: 3vw;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(155, 51, 240);
+    margin-left: 0.7vw !important;
+}
 @media only screen and (min-width: 660px) {
 
     .dash-nav {
