--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -34,6 +34,7 @@
     /* box-shadow: 0px 0px 2px 0.5px rgba(19, 19, 19, 0.178); */
     border: 1px solid rgb(236, 236, 236);
 }
+
 .crc {
     display: inline-flex;
     height: 1.4vh;
@@ -43,6 +44,17 @@
     border: 1px solid rgb(155, 51, 240);
     margin-left: 0.7vw !important;
 }
+
+.dashtop {
+    border-radius: 10px;
+    background-color: #fff;
+    width: 94%;
+    margin-right: 3% !important;
+    box-shadow: 0px 0px 3px 1px rgba(150, 14, 241, 0.377) ;
+    border: 1px solid rgb(140, 14, 224);
+    padding: 10px 5px !important;
+}
+
 @media only screen and (min-width: 660px) {
 
     .dash-nav {
