--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -31,6 +31,21 @@
 .blog-desc:link,.blog-title:link,.blog-div:link{
     text-decoration: none;
 }
+.skeleton {
+    background-image: linear-gradient(
+        90deg,
+        #eee 0% , #eee 40%
+        #ddd 50% , #ddd 55%
+        #eee 65% , #eee 100%
+    );
+    background-size: 400%;
+    animation: skeleton 1500ms infinite;
+}
+@keyframes skeleton {
+    from {background-position: 100% 100%;}
+    to {background-position: 0 0;}
+}
+
 @media only screen and (min-width:660px){
     .blog-div {
         float: left !important;
