--- a/src/css/user.css
+++ b/src/css/user.css
@@ -36,19 +36,28 @@
     text-align: center;
     color: rgb(119, 7, 211);
 }
-.UserTitle {
-    
-}
+
+.UserTitle {}
+
 .UserData {
     color: rgb(168, 73, 231);
     background-color: rgb(240, 240, 240);
     border-radius: 20px;
     padding-top: 0.6vh;
 }
+
 .pass {
     font-size: 8px;
 }
+
 .deleteUserBtn {
-    background-image: linear-gradient(120deg , rgb(255, 0, 0) , rgb(167, 11, 11));
+    background-image: linear-gradient(120deg, rgb(255, 0, 0), rgb(167, 11, 11));
     border: none;
+}
+
+.loadingBg {
+    background-color: rgba(224, 224, 224, 0.603);
+    padding: 0.5vh 1vw !important;
+    border-radius: 10px;
+    box-shadow: 0px 0px 3px 1px rgba(163, 163, 163, 0.349);
 }
