--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -56,6 +56,8 @@ textarea::placeholder {
 .dflex {
     display: flex;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 @media only screen and (min-width:660px) {
