--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -20,7 +20,7 @@
 }
 
 .field-purple {
-    background-color: rgba(223, 196, 248, 0.74);
+    background-color: rgba(208, 248, 196, 0.74);
     height: 10px;
     width: 60vw;
     margin-right: 20vw;
@@ -41,10 +41,11 @@
 }
 
 .create-app-button button {
-    background-image: linear-gradient(300deg, rgba(195, 0, 255), rgb(221, 163, 255));
+    background-image: linear-gradient(300deg, rgb(9, 255, 0), rgb(181, 255, 163));
     border: none;
+    color: #fff !important;
     transition: 1s;
-    box-shadow: 0px 2px 3px 1px rgba(148, 13, 153, 0.392);
+    box-shadow: 0px 2px 3px 1px rgba(36, 153, 13, 0.392);
     /* animation: pulse 1s infinite; */
 }
 
@@ -54,11 +55,11 @@
 
 @keyframes pulse {
     0% {
-        box-shadow: rgb(195, 0, 255) 0 0 0 0;
+        box-shadow: rgb(0, 255, 13) 0 0 0 0;
     }
 
     100% {
-        box-shadow: rgba(195, 0, 255, 0) 0 0 0 8px;
+        box-shadow: rgba(21, 255, 0, 0.034) 0 0 0 8px;
     }
 }
 
@@ -82,7 +83,7 @@
 
 .counters {
     text-align: center;
-    background-image: repeating-linear-gradient(45deg, rgb(133, 7, 172) 0px, rgb(133, 7, 172) 15px, rgb(158, 11, 243) 15px, rgb(158, 11, 243) 30px);
+    background-image: repeating-linear-gradient(45deg, rgb(7, 172, 15) 0px, rgb(13, 172, 7) 15px, rgb(11, 243, 30) 15px, rgb(11, 243, 23) 30px);
 
     margin: 0 5vw !important;
     border-radius: 10px;
@@ -104,7 +105,7 @@
 }
 
 .counter i {
-    color: rgba(209, 147, 233, 0.541);
+    color: rgba(157, 233, 147, 0.541);
     top: 0.9vh;
     right: 1.4vw;
     position: absolute;
@@ -117,13 +118,13 @@
 
 .nolinkdecoration {
     text-decoration: none;
-    color: #fff;
+    color: #fff !important;
 }
 
 .nolinkdecoration:link,
 .nolinkdecoration:hover {
     text-decoration: none;
-    color: #fff;
+    color: #fff !important;
 }
 
 .options {
@@ -175,7 +176,7 @@
     padding: 7px;
     height: 40px;
     border-radius: 100%;
-    color: rgba(154, 16, 218, 0.644);
+    color: rgba(50, 218, 16, 0.644);
 
 }
 @media only screen and (min-width: 660px) {
